--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         var fill_patterns = {};
 	</script>
 
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+	
 	<style type="text/css">
 		.flex-container-col {
 			display: flex;
@@ -64,9 +68,9 @@
 <body onload="init()">
 	<div class="flex-container-col">
 		<br><br>
-		Game difficulty:
+		<label for="slider" class="form-labe">Game difficulty:</label>
 		<div class="slidecontainer">
-			<input type="range" min="1" max="4" value="2" class="slider" id="slider">
+			<input type="range" class="form-range" min="1" max="4" value="2" id="slider">
 		</div>
 
 		<br><br>
@@ -75,9 +79,10 @@
 		</div>
 
 		<br><br>
-		<div class="user-entry-container">
-			<span class="typeable" id="guess-container" class="guess-container" contenteditable="true" onclick="handle_user_entry()">enter your guess</span>
-			<button class="button" onclick="handle_user_submission()">Submit</button>
+		
+		<div class="input-group mb-3">
+			<input type="text" id="guess-container" class="form-control" placeholder="Enter your guess" aria-label="Enter your guess" aria-describedby="button-submit-guess">
+			<button class="btn btn-outline-secondary" type="button" id="button-submit-guess" onclick="handle_user_submission()">Submit</button>
 		</div>
 
 		<br><br>
@@ -87,8 +92,24 @@
 
 		<br>
 		<div id="game-response-new-game-btn" class="game-response-new-game-btn">
-			<button onclick="new_game()">New Game?</button>
+			<button class="btn btn-outline-secondary" type="button" onclick="new_game()">New Game?</button>
 		</div>
+
+		
+		<br><br><br><br>
+		<!-- spoiler toast -->
+		<button type="button" class="btn btn-primary" id="spoilerToastBtn" style="max-width: 125px;">Spoil</button>
+		<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+			<div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+			  <div class="toast-header">
+				<strong class="me-auto">The solution...</strong>
+				<button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+			  </div>
+			  <div class="toast-body" id="puzzle_answer_toast">
+			  </div>
+			</div>
+		  </div>
+		<!-- spoiler toast -->
 
 	</div>
 
@@ -129,18 +150,26 @@
             fill_patterns[7] = [1, 1, 1, 0, 1, 0, 1, 1, 1];
             fill_patterns[8] = [1, 1, 1, 1, 0, 1, 1, 1, 1];
             fill_patterns[9] = [1, 1, 1, 1, 1, 1, 1, 1, 1];
+
+
+			document.getElementById("spoilerToastBtn").onclick = function() {
+  				var toastElList = [].slice.call(document.querySelectorAll('.toast'))
+  				var toastList = toastElList.map(function(toastEl) {
+    				return new bootstrap.Toast(toastEl);
+  				})
+				document.getElementById("puzzle_answer_toast").innerHTML = FromBase64JS({"to_decode":puzzle_solutions[0]});
+  				toastList.forEach(toast => toast.show());
+			}
 		};
 
 		function handle_user_entry() {
 			document.getElementById("game-response-container").style.visibility = "hidden";
 			document.getElementById("game-response-new-game-btn").style.visibility = "hidden";
-			elem = document.getElementById("guess-container");
-			elem.innerHTML = "";
 		}
 
 		function handle_user_submission() {
 			elem = document.getElementById("guess-container");
-			submission = elem.textContent;
+			submission = elem.value;
 			encoded_submission = ToBase64JS({"to_encode":submission})
 
 			document.getElementById("game-response-container").style.visibility = "visible";
@@ -156,7 +185,7 @@
 			document.getElementById("game-response-container").style.visibility = "hidden";
 			document.getElementById("game-response-new-game-btn").style.visibility = "hidden";
 			elem = document.getElementById("guess-container");
-			elem.innerHTML = "";
+			elem.value = "";
 			puzzle_solutions = ComputeAPuzzleWord();
 			drawPuzzle(puzzle_word, 100);
 		}
